Resolved an issue where the text in the main navigation item that says 'Leave a Message' would wrap to the next line, and that menu item would actually display in two separate lines, at some browser width between 720 pixels and 1107 pixels. Fixed it by changing the value of the grid-template-columns property, in the selector for the unordered list with the ID of 'main-navigation.' Now, that property value is no longer '1fr 1fr 1fr.' Instead, it uses the minmax function to specify the range of widths allowable for the middle column.

--- a/css/index.css
+++ b/css/index.css
@@ -299,8 +299,7 @@ textarea {
 }
 @media (min-width: 720px) and (max-width: 1107px) {
     #main-navigation ul {
-        grid-template-columns: 1fr 1fr 1fr;
-        /* could possibly use minmax() for the middle column) */
+        grid-template-columns: 1fr minmax(173px, 200px) 1fr;
     }
 }
 @media (min-width: 523px) and (max-width: 719px) {
